--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 			<div class="row mb-5">
 				<div class="col-md-12 text-center">
 					<p>
-						<a href="https://m.facebook.com › people › Parishith-Ragumar" class="social-item"><span class="icon-facebook2"></span></a>
+						<a href="https://www.facebook.com/profile.php?id=100078882093830" class="social-item"><span class="icon-facebook2"></span></a>
 						<a href="https://twitter.com/RP7_official" class="social-item"><span class="icon-twitter"></span></a>
 						<a href="https://www.instagram.com/rp07_official" class="social-item"><span class="icon-instagram2"></span></a>
 						<a href="www.linkedin.com/in/rp07official" class="social-item"><span class="icon-linkedin2"></span></a>
